--- a/admissions/config/locales/en.yml
+++ b/admissions/config/locales/en.yml
@@ -12,6 +12,7 @@ en:
     save: Save Admission Method
     show: Show Admission Method
     singular: Admission Method
+    starting_applicant_number: Starting Applicant Number
   admission_periods:
     add: Add Admission Period
     admitted_on: Admitted On
