[locale] for simple grades

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -582,6 +582,7 @@ en:
     singular: School
     slogan: Slogan
     vice_principal: Vice Principal
+    choose: Choose School
   search: Search
   select: Select
   semester:
