--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -583,6 +583,7 @@ en:
     slogan: Slogan
     vice_principal: Vice Principal
     choose: Choose School
+    show: School Show
   search: Search
   select: Select
   semester:
