--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -438,6 +438,16 @@ en:
     total_points: Total Score
     weighting: Weight
     weighting_portion: Weighting
+  grading_method:
+    singular: Grading Method
+    plural: Grading Methods
+    list: Grading Methods list
+    add: Add Grading Method
+    description: Description
+    name: Name
+    method: Methods
+    save: Save Grading Method
+    edit: Edit Grading Method
   graduated: Graduated On
   guardian:
     add: Add Guardian
