--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -510,6 +510,7 @@ en:
       school_details: School Details
       schools: Schools
       specialties: Specialties
+      grading_methods: Grading Methods
       system:
         backup: Backup
         system_tools: System Tools
