--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -117,8 +117,8 @@ en:
     singular: Attendance Type
   back: Back
   birth: Birth Date
-  birth_and: and
-  birth_between: Birth date between
+  birth_date_from: Birth date(from)
+  birth_date_to: Birth date(to)
   birth_date: Birth Date
   campus:
     add: Add Campus
