--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -101,6 +101,7 @@ en:
     new: New Attachment
     plural: Attachments
     singular: Attachment
+    save: Save Attachment
   attendance_type:
     add: Add Attendance Type
     auto_credit: Auto Credit
