fix and add exam completion info in course exams table

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -396,6 +396,11 @@ en:
     use_weighting: Use Weighting
     view: View Exams
     weight: Weight
+    ungraded: Ungraded
+    graded: Graded
+    total: Total
+    completion: Completion
+    grading_completion: Grading Completion
   exam_portion:
     adjustments: Adjustments
     attached_file_count: Attached file count
