--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -208,7 +208,7 @@ en:
     list: Contacts list
     new: New Contact
     plural: Contacts
-    primary: Primary
+    primary: Primary Contact
     save: Save Contact
     singular: Contact
   contact_type:
